--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,11 +15,9 @@
     z-index: 1000;
     display: block;
     padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow: hidden;
     background: #1E1E21;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-right: 1px solid #eee;
   }
 }
 
@@ -28,28 +26,50 @@
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
+  max-height: 90%;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-.navSidebar > :global(li) > :global(a) {
-  padding-right: 20px;
-  padding-left: 20px;
+.navSidebar::-webkit-scrollbar {
+  display: none;
+}
+
+.sidebarRadio {
+  padding: 20px 20px;
   box-sizing: border-box;
   background: #4D4D56;
   border: 1px solid #000000;
-  border-radius: 10px;
+  border-radius: 15px;
+  margin: 10px 10px;
+  min-height: 4em;
+  cursor: pointer;
 }
-.navSidebar > .active > :global(a),
-.navSidebar > .active > :global(a:hover),
-.navSidebar > .active > :global(a:focus) {
-  color: #fff;
-  background-color: #428bca;
+.sidebarRadio:hover {
+  filter: brightness(1.5);
 }
-.navSidebar > :global(li) > :global(a) > :global(span) {
+.sidebarRadio:active {
+  filter: brightness(2);
+}
+
+.sidebarRadioName {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   color: #FFFFFF;
   backdrop-filter: blur(2px);
+  vertical-align: middle;
+  padding-top: 16px;
+}
+
+.sidebarRadioCheck {
+  color: #1267FC;
+  font-size: 42px;
+}
+
+.menuNavSidebar {
+  overflow: hidden;
 }
 
 .menuButton {
@@ -58,12 +78,13 @@
   height: 42px;
   margin-top: -15px;
   float: right;
+  margin-right: 1em;
   cursor: pointer;
 }
 
 .menuButton .menuIcon {
   color: #1267FC;
-  font-size: 40px;
+  font-size: 42px;
 }
 
 .formGroup {
@@ -73,8 +94,15 @@
 .inputSearch {
   background: #62626C;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-style: none;
   border-radius: 10px;
   width: 100% !important;
+  min-height: 2.5em;
+  color: #FFFFFF;
+}
+
+.inputSearch::placeholder {
+  color: #FFFFFF;
 }
 
 /*
@@ -94,10 +122,35 @@
   margin-top: 0;
   text-align: center;
   color: #FFFFFF;
+  border: none;
+}
+
+.listHeader {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #FFFFFF;
+  padding-left: 3em;
+  padding-top: 12px;
 }
 
 .listSearch {
   text-align: right;
+}
+
+.listSearch .listSearchIcon {
+  color: #1267FC;
+  font-size: 28px;
+  margin-right: 10px;
+}
+
+.listSearch .listSearchText {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #FFFFFF;
 }
 
 .favoriteList {
@@ -105,13 +158,56 @@
   background: #4D4D56;
   border: 1px solid #000000;
   border-radius: 10px;
+  max-height: 80vh;
+  overflow: hidden scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.favoriteList::-webkit-scrollbar {
+  display: none;
 }
 
 .listRadio {
   background: #62626C;
   backdrop-filter: blur(2px);
+  list-style-type: none;
+  height: 5em;
+  padding-top: 10px;
+  margin: 15px 10px;
 }
 
-.listRadio > :global(span) {
-  backdrop-filter: blur(2px);
+.listRadioFavicon {
+  position: relative;
+  width: 54px;
+  height: 48px;
+  border-radius: 50px;
+  float: right;
+}
+
+.listRadioName {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.listRadioTags {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+}
+
+.listRadioButton {
+  margin-top: 5px;
+}
+
+.listRadioIcon {
+  cursor: pointer;
+  color: #000000;
+  font-size: 30px;
 }
