--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -176,7 +176,7 @@
   background: #4D4D56;
   border: 1px solid #000000;
   border-radius: 10px;
-  max-height: 65vh;
+  max-height: calc(100vh - 25rem);
   overflow: hidden scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
