--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,24 +1,18 @@
 /*
  * Sidebar
  */
-
-/* Hide for mobile, show later */
+ 
 .sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 0px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow: hidden;
-    background: #1E1E21;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
+  position: fixed;
+  top: 0px;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: block;
+  padding: 20px;
+  overflow: hidden;
+  background: #1E1E21;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* Sidebar navigation */
@@ -36,7 +30,6 @@
 }
 
 .sidebarRadio {
-  padding: 20px 20px;
   box-sizing: border-box;
   background: #4D4D56;
   border: 1px solid #000000;
@@ -60,13 +53,15 @@
   font-size: 16px;
   color: #FFFFFF;
   backdrop-filter: blur(2px);
-  vertical-align: middle;
   padding-top: 16px;
+  padding-right: 0px;
 }
 
 .sidebarRadioCheck {
+  position: absolute;
+  left: 0;
   color: #1267FC;
-  font-size: 42px;
+  font-size: 42px;;
 }
 
 .menuNavSidebar {
@@ -95,10 +90,12 @@
 }
 
 .formGroup {
-  width: 100%;
+  width: 30vh;
+  margin: auto;
 }
 
 .inputSearch {
+  padding: 0px 20px;
   background: #62626C;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-style: none;
@@ -117,13 +114,7 @@
  */
 
 .main {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
+  padding: 4vh 5vw;
 }
 .main .pageHeader {
   margin-top: 0;
@@ -138,7 +129,7 @@
   font-weight: 400;
   font-size: 16px;
   color: #FFFFFF;
-  padding-left: 3em;
+  padding-left: 4vw;
   padding-top: 12px;
 }
 
@@ -151,6 +142,13 @@
   font-size: 28px;
   margin-right: 10px;
   cursor: pointer;
+}
+@media (max-width: 576px) {
+  .listSearchIcon {
+    position: absolute;
+    top: -100px;
+    left: 87vw;
+  }
 }
 .listSearchHover {
   filter: brightness(1.5);
@@ -267,6 +265,13 @@
 
 .listRadioButton {
   margin-top: 5px;
+}
+@media (max-width: 576px) {
+  .listRadioButton {
+    padding: 0px;
+    margin-left: 20px;
+    width: fit-content;
+  }
 }
 
 .listRadioIcon {
