--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -142,7 +142,6 @@
   color: #1267FC;
   font-size: 28px;
   margin-right: 10px;
-  cursor: pointer;
 }
 @media (max-width: 576px) {
   .listSearchIcon {
@@ -152,9 +151,11 @@
   }
 }
 .listSearchHover {
+  cursor: pointer;
   filter: brightness(1.5);
 }
 .listSearchActive {
+  cursor: pointer;
   filter: brightness(2);
 }
 
@@ -167,6 +168,8 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+.listSearchTextHover,  .listSearchTextActive {
   cursor: pointer;
 }
 
