--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -110,6 +110,35 @@
   color: #FFFFFF;
 }
 
+.sidebarPagingDiv {
+  box-sizing: border-box;
+  min-height: 4em;
+  max-width: 100%;
+  margin: 0px;
+}
+
+.sidebarPagingInfo {
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 16px;
+  padding: 0.2em 0 0 0;
+  overflow-wrap: normal;
+}
+
+.sidebarPagingIcon {
+  color: #FFFFFF;
+  cursor: pointer;
+  text-align: center;
+  font-size: 20px;
+  padding: 0px;
+}
+.sidebarPagingIcon:hover {
+  filter: invert(40%);
+}
+.sidebarPagingIcon:active {
+  filter: invert(80%);
+}
+
 /*
  * Main content
  */
