--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -205,8 +205,9 @@
 .favoriteList {
   box-sizing: border-box;
   background: #4D4D56;
-  border: 1px solid #000000;
   border-radius: 10px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
   max-height: calc(100vh - 25rem);
   overflow: hidden scroll;
   -ms-overflow-style: none;
@@ -214,6 +215,17 @@
 }
 .favoriteList::-webkit-scrollbar {
   display: none;
+}
+
+.playingRadioDiv {
+  margin-bottom: 0px;
+  border: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom: 2px solid #605C5C;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .listRadio {
@@ -227,6 +239,7 @@
 
 .playingRadio {
   background: inherit;
+  margin-bottom: 0px;
 }
 
 .radioFaviconDiv {
