--- a/src/app/components/main/play-radio.module.css
+++ b/src/app/components/main/play-radio.module.css
@@ -7,7 +7,7 @@
 }
 
 .playingRadioDiv {
-  composes: favoriteList from './../../page.module.css';
+  composes: favoriteList from '@/page.module.css';
   margin-bottom: 0px;
   border: 0px;
   border-bottom-left-radius: 0px;
